[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/StarField.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UI/Button.png" type="Texture" id=4]
[ext_resource path="res://scripts/Title.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/ButtonPressed.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "show_title"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TitleLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("RepeatTitleAnim")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start"
} ]
}

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Title" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="StarField" parent="." instance=ExtResource( 1 )]

[node name="TitleLabel" type="Label" parent="."]
margin_left = 39.71
margin_top = 83.03
margin_right = 228.71
margin_bottom = 197.03
custom_fonts/font = SubResource( 1 )
text = "Generic 
Space 
Shooter"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowTitleAnim" type="AnimationPlayer" parent="."]
anims/show_title = SubResource( 2 )

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 98.0
margin_top = 229.15
margin_right = 171.0
margin_bottom = 252.15
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartButton"]
margin_left = 13.1158
margin_top = 1.96647
margin_right = 64.1158
margin_bottom = 19.9665
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 98.0
margin_top = 256.161
margin_right = 171.0
margin_bottom = 279.161
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuitButton"]
margin_left = 18.6768
margin_top = 1.96647
margin_right = 69.6768
margin_bottom = 19.9665
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="RepeatTitleAnim" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="RepeatTitleAnim" to="." method="_on_RepeatTitleAnim_timeout"]
